<resources>
    <string name="app_name">PetPal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit"></string>
    <string name="loginButton">Prijavi me</string>
    <string name="registerName">Unesite ime psa...</string>
    <string name="registerDogDescription">Unesite opis psa...</string>
    <string name="registerDogBreed">Unesite rasu psa...</string>
    <string name="registerDogStatus">Izaberite status psa...</string>
    <string name="registerDogPwConfirm">Potvrdite šifru...</string>
    <string name="loginEmail">Unesite email...</string>
    <string name="changeEmail">Unesite novi email...</string>
    <string name="loginPassword">Unesite šifru...</string>
    <string name="homeButtonLogin">Prijava</string>
    <string name="homeButtonRegister">Registracija</string>
    <string name="registerButton">Registruj me</string>
    <string name="changeButton">Potvrdi promenu</string>
    <string name="navbar_map">Mapa</string>
    <string name="navbar_chats">Šetnje</string>
    <string name="navbar_profile">Profil</string>
    <string name="tabProfile"><b>Podešavanja</b></string>
    <string name="tabProfileProperties"><b>Promeni profil</b></string>
    <string name="tabProfileStatus"><b>Status</b></string>
    <string name="tabProfileChange"><b>Promeni profil</b></string>
    <string name="tabProfileFriends"><b>Lista prijatelja</b></string>
    <string name="tabProfileDelete"><b>Obriši profil</b></string>
    <string name="profileDogName"><b>Ime psa:</b></string>
    <string name="profileDogDesc"><b>Opis psa:</b></string>
    <string name="profileDogBreed"><b>Rasa psa:</b></string>
    <string name="profileDogEmail"><b>Promenite email</b></string>
    <string name="profileDogPassword"><b>Promenite šifru</b></string>
    <string name="eventTitle"><b>Informacije događaja</b></string>
    <string name="settingsChangeMailTitle"><b>Promeni trenutni email</b></string>
    <string name="settingsChangePwTitle"><b>Promeni šifru</b></string>
    <string name="dogProfileTitle"><b>Profil psa</b></string>
    <string name="eventTitleList"><b>Posetioci</b></string>
    <string name="confirmation">Uspešno promenjeno</string>
    <string name="chats_title">Šetnje</string>
    <string name="action_drz">Druzeljubiv</string>
    <string name="action_nez">Nezainteresovan</string>
    <string name="action_agr">Agresivan</string>
    <string name="action_inv">Offline</string>
    <string name="obave_tenja">Obaveštenja</string>
    <string name="channel_name">PetPal</string>
    <string name="channel_description">PetPal notifications</string>
    <string-array name="dogStatus">
        <item>Izaberite status psa...</item>
        <item>Druzeljubiv</item>
        <item>Nezainteresovan</item>
        <item>Agresivan</item>
    </string-array>
</resources>