<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLogin">



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="20dp"
        android:contentDescription="@string/submit"
        android:src="@drawable/outline_arrow_back_black_36"
        android:backgroundTint="@color/background_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="148.77dp"
        android:layout_height="120dp"
        android:layout_marginTop="100dp"
        app:tint="@color/icon_logo"
        android:src="@drawable/ic_paw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextLoginEmail"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:fontFamily="@font/baloo_bhai_2"
        android:hint="@string/loginEmail"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        app:shapeAppearance="@style/Input.Login.Design"
        app:layout_constraintBottom_toTopOf="@+id/editTextLoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/baloo_bhai_2"
        android:hint="@string/loginPassword"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagePasswordBackground"
        app:layout_constraintEnd_toEndOf="@+id/imagePasswordBackground"
        app:layout_constraintStart_toStartOf="@+id/imagePasswordBackground"
        app:layout_constraintTop_toTopOf="@+id/imagePasswordBackground" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/button_login"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/loginButton"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/Button.Login.Design" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imagePasswordBackground"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/Input.Login.Design"
        app:strokeColor="@color/button_login"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>