<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FragmentProfileChangeEmail">


    <Button
        android:id="@+id/buttonChangeEmail"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="@string/changeButton"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword"
        app:shapeAppearance="@style/Button.Login.Design" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_chatroom_header"
        android:background="@color/blue"
        >


        <TextView
            android:id="@+id/textTitle5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_bhai_2"
            android:text="@string/settingsChangeMailTitle"
            android:textColor="@color/white"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageBackButton3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/outline_arrow_back_white_48"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_chatroom_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_chatroom_header" />

    <ImageView
        android:id="@+id/imageLine11"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:background="@color/blue_medium"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewChangeMailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_bhai_2"
        android:text="Trenutni email:"
        android:textColor="@color/very_dark_blue"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageLine11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />


    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/baloo_bhai_2"
        android:hint="@string/changeEmail"
        android:inputType="textEmailAddress"
        android:padding="10px"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageEmailBackground"
        app:layout_constraintEnd_toEndOf="@+id/imageEmailBackground"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageEmailBackground"
        app:layout_constraintTop_toTopOf="@+id/imageEmailBackground"
        app:layout_constraintVertical_bias="1.0"
        app:shapeAppearance="@style/Input.Login.Design" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageEmailBackground"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:shapeAppearance="@style/Input.Login.Design"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp" />


    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:ems="10"
        android:fontFamily="@font/baloo_bhai_2"
        android:hint="@string/loginPassword"
        android:inputType="textPassword"
        android:padding="10px"

        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagePasswordBackground"
        app:layout_constraintEnd_toEndOf="@+id/imagePasswordBackground"
        app:layout_constraintStart_toStartOf="@+id/imagePasswordBackground"
        app:layout_constraintTop_toTopOf="@+id/imagePasswordBackground"
        app:shapeAppearance="@style/Input.Login.Design" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imagePasswordBackground"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageEmailBackground"
        app:shapeAppearance="@style/Input.Login.Design"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp" />

    <ImageView
        android:id="@+id/imagePwHide"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextRegisterPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextRegisterPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextRegisterPassword"
        app:srcCompat="@drawable/outline_visibility_black_24"
        app:tint="@color/blue" />




</androidx.constraintlayout.widget.ConstraintLayout>